--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
                 <a href="biologia.html"> Biologia</a>
             </div>
             <div class="disciplina">
-                <a href="matematica.html"> Matemática</a>
+                <a href="#"> Matemática</a>
             </div>
             <div class="disciplina">
-                <a href="fisica.html"> Física</a>
+                <a href="#"></a> Física</a>
             </div>
             <div class="disciplina">
                 <a href="quimica.html"> Química</a>
