--- a/quimica.html
+++ b/quimica.html
@@ -18,17 +18,17 @@
     <header>
         <div class="lista-vertical">
             <ul>
-                <li><a href=""></a>matematica</li>
-                <li><a href=""></a>fisica</li>
-                <li><a href=""></a>biologia</li>
+                <li><a href="#"></a>matematica</li>
+                <li><a href="#"></a>fisica</li>
+                <li><a href="biologia.html"></a>biologia</li>
             </ul>
         </div>
 
         <div class="lista-horizontal">
             <ul>
-                <li><a href=""></a>provas</li>
-                <li><a href=""></a>relatorio</li>
-                <li><a href=""></a>atividades</li>
+                <li><a href="#"></a>provas</li>
+                <li><a href="#"></a>relatorio</li>
+                <li><a href="#"></a>atividades</li>
             </ul>
 
         </div>
