--- a/quimica.html
+++ b/quimica.html
@@ -1,45 +1,39 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfólio de quimica</title>
-    <link rel="stylesheet" href="quimica.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
-        integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-
-</head>
-
-<body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Portfólio de Química</title>
+    <link rel="stylesheet" href="quimica.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
+      integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+  </head>
+  <body>
     <header>
-        <div class="lista-vertical">
-            <ul>
-                <li><a href="#"></a>matematica</li>
-                <li><a href="#"></a>fisica</li>
-                <li><a href="biologia.html"></a>biologia</li>
-            </ul>
+      <section class="menus">
+        <div class="menu__externo">
+          <ul>
+            <li><a href="#">Matemática</a></li>
+            <li><a href="biologia.html">Biologia</a></li>
+            <li><a href="#">Física</a></li>
+          </ul>
         </div>
-
-        <div class="lista-horizontal">
-            <ul>
-                <li><a href="#"></a>provas</li>
-                <li><a href="#"></a>relatorio</li>
-                <li><a href="#"></a>atividades</li>
-            </ul>
-
+        <div class="menu__interno">
+          <ul>
+            <li><a href="#">Laboratório</a></li>
+            <li><a href="#">Atividades</a></li>
+            <li><a href="#">Provas</a></li>
+          </ul>
         </div>
-       
+      </section>
     </header>
-
-    <main>
-
-    </main>
-    
-    <footer>
-
-    </footer>
-</body>
+    <main></main>
+    <footer></footer>
+  </body>
+</html>
