--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <a href="#"> Matemática</a>
             </div>
             <div class="disciplina">
-                <a href="#"></a> Física</a>
+                <a href="#"> Física</a>
             </div>
             <div class="disciplina">
                 <a href="quimica.html"> Química</a>
