--- a/quimica.html
+++ b/quimica.html
@@ -33,7 +33,13 @@
         </div>
       </section>
     </header>
-    <main></main>
+    <main>
+         <div class="home">
+            <a href="./index.html"><i class="fa-solid fa-house"></i></a>
+        </div>
+        <h1>química</h1>
+        
+    </main>
     <footer></footer>
   </body>
 </html>
