--- a/quimica.html
+++ b/quimica.html
@@ -38,7 +38,16 @@
             <a href="./index.html"><i class="fa-solid fa-house"></i></a>
         </div>
         <h1>química</h1>
-        
+        <section class="quimica">
+            <div id="provas" class="assuntos">
+                <h2>Provas</h2>
+                <p>avaliações do trimestre</p>
+                <h2>provas</h2>
+                <ul>
+          <li>av1: valor:1,5.<span class="block"> <br> assunto: o capitalismo falha parte I.</span></li>
+          <li>av2: valor:1,5.<span class="block"> <br> assunto: o capitalismo falha parte II.</span></li>
+                </ul>
+               
     </main>
     <footer></footer>
   </body>
