--- a/fisica.html
+++ b/fisica.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Portfólio de Química</title>
-    <link rel="stylesheet" href="quimica.css" />
+    <title>Portfólio de Física</title>
+    <link rel="stylesheet" href="fisica.css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
@@ -37,8 +37,8 @@
          <div class="home">
             <a href="./index.html"><i class="fa-solid fa-house"></i></a>
         </div>
-        <h1>química</h1>
-        <section class="quimica">
+        <h1>Física</h1>
+        <section class="fisica">
             <div id="provas" class="assuntos">
                 <h2>Provas</h2>
                 <p>avaliações do trimestre</p>
