--- a/matematica.html
+++ b/matematica.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Portfólio de Química</title>
-    <link rel="stylesheet" href="quimica.css" />
+    <title>Portfólio de Matemática</title>
+    <link rel="stylesheet" href="matematica.css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
@@ -19,7 +19,7 @@
       <section class="menus">
         <div class="menu__externo">
           <ul>
-            <li><a href="matematica.html">Matemática</a></li>
+            <li><a href="quimica.html">Química</a></li>
             <li><a href="biologia.html">Biologia</a></li>
             <li><a href="fisica.html">Física</a></li>
           </ul>
@@ -37,8 +37,8 @@
          <div class="home">
             <a href="./index.html"><i class="fa-solid fa-house"></i></a>
         </div>
-        <h1>química</h1>
-        <section class="quimica">
+        <h1>Matemática</h1>
+        <section class="matematica">
             <div id="provas" class="assuntos">
                 <h2>Provas</h2>
                 <p>avaliações do trimestre</p>
