--- a/quimica.html
+++ b/quimica.html
@@ -34,10 +34,10 @@
       </section>
     </header>
     <main>
-         <div class="home">
-            <a href="./index.html"><i class="fa-solid fa-house"></i></a>
-        </div>
+         <section id="atividades" class="atividades">
+         <div class="cards">
         <h1>química</h1>
+        
         <section class="quimica">
             <div id="provas" class="assuntos">
                 <h2>Provas</h2>
