--- a/fisica.html
+++ b/fisica.html
@@ -34,19 +34,81 @@
       </section>
     </header>
     <main>
-         <div class="home">
-            <a href="./index.html"><i class="fa-solid fa-house"></i></a>
+        <section id="atividades" class="atividades">
+        <div class="cards">
+          <h2>Atividades</h2>
+          <ul>
+            <li class="card">
+              <h3>Atividade 01</h3>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                Praesent efficitur dui vitae ligula tristique congue. Nam
+                fermentum, nunc sed gravida rhoncus, lorem tortor tempor felis,
+                nec luctus nisi metus ac ligula.
+              </p>
+            </li>
+            <li class="card">
+              <h3>Atividades 02</h3>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                Praesent efficitur dui vitae ligula tristique congue. Nam
+                fermentum, nunc sed gravida rhoncus, lorem tortor tempor felis,
+                nec luctus nisi metus ac ligula.
+              </p>
+            </li>
+          </ul>
         </div>
-        <h1>Física</h1>
-        <section class="fisica">
-            <div id="provas" class="assuntos">
-                <h2>Provas</h2>
-                <p>avaliações do trimestre</p>
-                <ul>
-          <li>av1: valor:1,5.<span class="block"> <br> assunto: o capitalismo falha parte I.</span></li>
-          <li>av2: valor:1,5.<span class="block"> <br> assunto: o capitalismo falha parte II.</span></li>
-                </ul>
-               
+      </section>
+      <section id="laboratorio" class="laboratorio">
+        <div class="cards">
+          <h2>Laboratório</h2>
+          <ul>
+            <li class="card">
+              <h3>Laboratório 01</h3>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                Praesent efficitur dui vitae ligula tristique congue. Nam
+                fermentum, nunc sed gravida rhoncus, lorem tortor tempor felis,
+                nec luctus nisi metus ac ligula.
+              </p>
+            </li>
+            <li class="card">
+              <h3>Laboratório 02</h3>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                Praesent efficitur dui vitae ligula tristique congue. Nam
+                fermentum, nunc sed gravida rhoncus, lorem tortor tempor felis,
+                nec luctus nisi metus ac ligula.
+              </p>
+            </li>
+          </ul>
+        </div>
+      </section>
+      <section id="provas" class="provas">
+        <div class="cards">
+          <h2>Provas</h2>
+          <ul>
+            <li class="card">
+              <h3>Prova 01</h3>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                Praesent efficitur dui vitae ligula tristique congue. Nam
+                fermentum, nunc sed gravida rhoncus, lorem tortor tempor felis,
+                nec luctus nisi metus ac ligula.
+              </p>
+            </li>
+            <li class="card">
+              <h3>Prova 02</h3>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                Praesent efficitur dui vitae ligula tristique congue. Nam
+                fermentum, nunc sed gravida rhoncus, lorem tortor tempor felis,
+                nec luctus nisi metus ac ligula.
+              </p>
+            </li>
+          </ul>
+        </div>
+      </section>
     </main>
     <footer></footer>
   </body>
