--- a/quimica.html
+++ b/quimica.html
@@ -17,24 +17,24 @@
   <body>
     <header>
       <section class="menus">
-        <div class="menu__externo">
+        <div class="menu_externo">
           <ul>
-            <li><a href="matematica.html">Matemática</a></li>
+            <li><a href="#">Matemática</a></li>
             <li><a href="biologia.html">Biologia</a></li>
-            <li><a href="fisica.html">Física</a></li>
+            <li><a href="#">Física</a></li>
           </ul>
         </div>
-        <div class="menu__interno">
+        <div class="menu_interno">
           <ul>
-            <li><a href="#">Laboratório</a></li>
-            <li><a href="#">Atividades</a></li>
-            <li><a href="#">Provas</a></li>
+            <li><a href="#atividades">Atividades</a></li>
+            <li><a href="#laboratorio">Laboratório</a></li>
+            <li><a href="#provas">Provas</a></li>
           </ul>
         </div>
       </section>
     </header>
     <main>
-        <section id="atividades" class="atividades">
+      <section id="atividades" class="atividades">
         <div class="cards">
           <h2>Atividades</h2>
           <ul>
@@ -109,7 +109,6 @@
           </ul>
         </div>
       </section>
-               
     </main>
     <footer></footer>
   </body>
