--- a/matematica.html
+++ b/matematica.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Portfólio de Matemática</title>
+    <title>Portfólio de matematica</title>
     <link rel="stylesheet" href="matematica.css" />
     <link
       rel="stylesheet"
@@ -17,24 +17,24 @@
   <body>
     <header>
       <section class="menus">
-        <div class="menu__externo">
+        <div class="menu_externo">
           <ul>
-            <li><a href="quimica.html">Química</a></li>
+            <li><a href="matematica.html">Matemática</a></li>
             <li><a href="biologia.html">Biologia</a></li>
             <li><a href="fisica.html">Física</a></li>
           </ul>
         </div>
-        <div class="menu__interno">
+        <div class="menu_interno">
           <ul>
-            <li><a href="#">Laboratório</a></li>
-            <li><a href="#">Atividades</a></li>
-            <li><a href="#">Provas</a></li>
+            <li><a href="#atividades">Atividades</a></li>
+            <li><a href="#laboratorio">Laboratório</a></li>
+            <li><a href="#provas">Provas</a></li>
           </ul>
         </div>
       </section>
     </header>
     <main>
-        <section id="atividades" class="atividades">
+      <section id="atividades" class="atividades">
         <div class="cards">
           <h2>Atividades</h2>
           <ul>
