--- a/quimica.html
+++ b/quimica.html
@@ -41,19 +41,13 @@
             <li class="card">
               <h3>Atividade 01</h3>
               <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                Praesent efficitur dui vitae ligula tristique congue. Nam
-                fermentum, nunc sed gravida rhoncus, lorem tortor tempor felis,
-                nec luctus nisi metus ac ligula.
+           ciência que estuda a matéria, sua composição, estrutura, propriedades e transformações, bem como as energias envolvidas nesses processos
               </p>
             </li>
             <li class="card">
               <h3>Atividades 02</h3>
               <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                Praesent efficitur dui vitae ligula tristique congue. Nam
-                fermentum, nunc sed gravida rhoncus, lorem tortor tempor felis,
-                nec luctus nisi metus ac ligula.
+               ciência que estuda a matéria, sua composição, estrutura, propriedades e transformações, bem como as energias envolvidas nesses processos
               </p>
             </li>
           </ul>
@@ -66,19 +60,13 @@
             <li class="card">
               <h3>Laboratório 01</h3>
               <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                Praesent efficitur dui vitae ligula tristique congue. Nam
-                fermentum, nunc sed gravida rhoncus, lorem tortor tempor felis,
-                nec luctus nisi metus ac ligula.
+               ciência que estuda a matéria, sua composição, estrutura, propriedades e transformações, bem como as energias envolvidas nesses processos
               </p>
             </li>
             <li class="card">
               <h3>Laboratório 02</h3>
               <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                Praesent efficitur dui vitae ligula tristique congue. Nam
-                fermentum, nunc sed gravida rhoncus, lorem tortor tempor felis,
-                nec luctus nisi metus ac ligula.
+         ciência que estuda a matéria, sua composição, estrutura, propriedades e transformações, bem como as energias envolvidas nesses processos
               </p>
             </li>
           </ul>
@@ -91,19 +79,13 @@
             <li class="card">
               <h3>Prova 01</h3>
               <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                Praesent efficitur dui vitae ligula tristique congue. Nam
-                fermentum, nunc sed gravida rhoncus, lorem tortor tempor felis,
-                nec luctus nisi metus ac ligula.
+                ciência que estuda a matéria, sua composição, estrutura, propriedades e transformações, bem como as energias envolvidas nesses processos
               </p>
             </li>
             <li class="card">
               <h3>Prova 02</h3>
               <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                Praesent efficitur dui vitae ligula tristique congue. Nam
-                fermentum, nunc sed gravida rhoncus, lorem tortor tempor felis,
-                nec luctus nisi metus ac ligula.
+             ciência que estuda a matéria, sua composição, estrutura, propriedades e transformações, bem como as energias envolvidas nesses processos
               </p>
             </li>
           </ul>
